PLUGINWIZARD-76: Fixed layout

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/message_exists.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/message_exists.html
@@ -1,4 +1,6 @@
-<div class="row">   
+<div class="row">
+	<div class="container">
+		<div class="panel panel-default"> 
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">#i18n{pluginwizard.pluginwizard_plugin_exists.pageTitle}</h4>
@@ -21,6 +23,8 @@
                     </form>
                 </div>
             </div>
+		</div>
+	</div>
 </div>
 <br>
 <br>
