--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
@@ -1,98 +1,103 @@
 <#include "sidebar.html" />   
 
 <div class="row">
+	<div class="container">
+		<div class="panel panel-default">
+			<div class="col-md-3">             
+				<@sidebar step="administration" />
+				<div class="well">         
+					#i18n{pluginwizard.pluginwizard_create_admin_feature.pageHelp}
+				</div>  
+			</div>
 
-    <div class="col-md-3">             
-        <@sidebar step="administration" />
-        <div class="well">         
-            #i18n{pluginwizard.pluginwizard_create_admin_feature.pageHelp}      
-        </div>  
-    </div>
+			<div class="col-md-9">
+				<form class="form form-horizontal well" method="post" action="jsp/site/Portal.jsp" > 
+					<fieldset>
+						<legend>#i18n{pluginwizard.pluginwizard_create_admin_feature.pageTitle}</legend>                           
+						<input type="hidden" name="page" value="pluginwizard" />                         
 
-    <div class="col-md-9">
-        <form class="form form-horizontal well" method="post" action="jsp/site/Portal.jsp" > 
-            <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_create_admin_feature.pageTitle}</legend>                           
-                <input type="hidden" name="page" value="pluginwizard" />                         
+						 <#include "errors_handler.html" />
 
-                 <#include "errors_handler.html" />
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureTitle} : </label>                
-                    <div class="col-md-9">      
-                         <input class="form-control input-md" type="text" name="feature_title" value="${feature.featureTitle!''}" />                                         
-                    </div>
-                </div>
-
-                <div class="form-group">                                                         
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureDescription} : </label>                 
-                    <div class="col-md-9">        
-                         <input class="form-control input-md" type="text" name="feature_description" value="${feature.featureDescription!''}" />                           
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureName} :         
-                    </label>          
-                    <div class="col-md-9">           
-                         <input class="form-control input-md" type="text" name="feature_name" value="<#if feature.featureName??>${feature.featureName}<#else>Manage${plugin_model.pluginName?cap_first}</#if>" />                     
-                    </div>             
-                </div> 
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureManagement} : </label>                
-                    <div class="col-md-9">    
-                        <input type="text" class="form-control input-md" name="feature_right" value="<#if feature.featureRight??>${feature.featureRight}<#else>${plugin_model.pluginName?upper_case}_MANAGEMENT</#if>"  />      
-                    </div>    
-                </div>
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureLevel} :  </label>               
-                    <div class="col-md-9">            
-                        <select class="form-control input-md" name="feature_level">    				           
-                            <option value="0" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel0}           
-                            </option>    				           
-                            <option value="1" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel1}           
-                            </option>    				           
-                            <option value="2" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel2}           
-                            </option>    				           
-                            <option value="3" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel3}           
-                            </option>				         
-                        </select>               
-                    </div> 
-                </div>
-                 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelBusinessClass} :</label>        
-                    <div class="col-md-9">
-						<div class="checkbox">
-                        <#list combo_business_classes?sort_by('name') as business>
-                            <#assign used = false>
-                            <#list admin_features as admin_feature> 
-                                <#if admin_feature.getIdBusinessClasses()?seq_contains(business.code?number)>
-                                    <#assign used = true>
-                                </#if>
-                            </#list>
-                            <#if used>
-                                <input type="checkbox" disabled="disabled" name="id_business_class${business.code}" value="${business.code}" />${business.name}<br />
-                            <#else>
-                                <input type="checkbox" name="id_business_class${business.code}" value="${business.code}" />${business.name}<br />
-                            </#if>
-                        </#list>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureTitle} : </label>                
+							<div class="col-md-9">      
+								 <input class="form-control input-md" type="text" name="feature_title" value="${feature.featureTitle!''}" />                                         
+							</div>
 						</div>
-                    </div>   
-                </div>
-                
-                <div class="form-group">
-					<div class="col-md-offset-3 col-md-9">
-                    <button type="submit" name="action_createAdminFeature"class="btn btn-primary">
-                        #i18n{pluginwizard.pluginwizard_create_admin_feature.buttonCreateFeature}       
-                    </button>                           
-                    <button type="submit" name="view_manageAdminFeatures" class="btn btn-default">
-                        #i18n{pluginwizard.pluginwizard_create_admin_feature.buttonBack}       
-                    </button>	     
-                </div>  
-				</div> 
-         </form>
-    </div>
+
+						<div class="form-group">                                                         
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureDescription} : </label>                 
+							<div class="col-md-9">        
+								 <input class="form-control input-md" type="text" name="feature_description" value="${feature.featureDescription!''}" />                           
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureName} :         
+							</label>          
+							<div class="col-md-9">           
+								 <input class="form-control input-md" type="text" name="feature_name" value="<#if feature.featureName??>${feature.featureName}<#else>Manage${plugin_model.pluginName?cap_first}</#if>" />                     
+							</div>             
+						</div> 
+
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureManagement} : </label>                
+							<div class="col-md-9">    
+								<input type="text" class="form-control input-md" name="feature_right" value="<#if feature.featureRight??>${feature.featureRight}<#else>${plugin_model.pluginName?upper_case}_MANAGEMENT</#if>"  />      
+							</div>    
+						</div>
+
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureLevel} :  </label>               
+							<div class="col-md-9">            
+								<select class="form-control input-md" name="feature_level">    				           
+									<option value="0" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel0}           
+									</option>    				           
+									<option value="1" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel1}           
+									</option>    				           
+									<option value="2" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel2}           
+									</option>    				           
+									<option value="3" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel3}           
+									</option>				         
+								</select>               
+							</div> 
+						</div>
+						 
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelBusinessClass} :</label>        
+							<div class="col-md-9">
+								<div class="checkbox">
+								<#list combo_business_classes?sort_by('name') as business>
+									<#assign used = false>
+									<#list admin_features as admin_feature> 
+										<#if admin_feature.getIdBusinessClasses()?seq_contains(business.code?number)>
+											<#assign used = true>
+										</#if>
+									</#list>
+									<#if used>
+										<label>
+										<input type="checkbox" disabled="disabled" name="id_business_class${business.code}" value="${business.code}" />${business.name}</label><br />
+									<#else>
+										<label><input type="checkbox" name="id_business_class${business.code}" value="${business.code}" />${business.name}</label><br />
+									</#if>
+								</#list>
+								</div>
+							</div>   
+						</div>
+						
+						<div class="form-group">
+							<div class="col-md-offset-3 col-md-9">
+							<button type="submit" name="action_createAdminFeature"class="btn btn-primary">
+								#i18n{pluginwizard.pluginwizard_create_admin_feature.buttonCreateFeature}       
+							</button>                           
+							<button type="submit" name="view_manageAdminFeatures" class="btn btn-default">
+								#i18n{pluginwizard.pluginwizard_create_admin_feature.buttonBack}       
+							</button>	     
+						</div>  
+						</div> 
+				 </form>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
