--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_application.html
@@ -1,73 +1,73 @@
 <#include "sidebar.html" />   
 
 <div class="row">
+	<div class="container">
+		<div class="panel panel-default">
 
-    <div class="col-md-3">             
-        <@sidebar step="xpage" />
-        <div class="well">         
-            #i18n{pluginwizard.pluginwizard_create_application.pageHelp}    
-        </div>  
-    </div>
+			<div class="col-md-3">             
+				<@sidebar step="xpage" />
+				<div class="well">         
+					#i18n{pluginwizard.pluginwizard_create_application.pageHelp}    
+				</div>  
+			</div>
 
-    <div class="col-md-9">
-        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
-            <input type="hidden" name="page" value="pluginwizard" />
-            <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_create_application.pageTitle}</legend>
+			<div class="col-md-9">
+				<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
+					<input type="hidden" name="page" value="pluginwizard" />
+					<fieldset>
+						<legend>#i18n{pluginwizard.pluginwizard_create_application.pageTitle}</legend>
 
-                 <#include "errors_handler.html" />
+						 <#include "errors_handler.html" />
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_application.labelApplicationName} :</label>
-                    <div class="col-md-9">   
-                        <input class="form-control input-md" type="text" name="application_name" value="<#if application.applicationName??>${application.applicationName}<#else>${plugin_model.pluginName?lower_case}</#if>" />
-                    </div>    
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_application.labelApplicationName} :</label>
+							<div class="col-md-9">   
+								<input class="form-control input-md" type="text" name="application_name" value="<#if application.applicationName??>${application.applicationName}<#else>${plugin_model.pluginName?lower_case}</#if>" />
+							</div>    
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_application.labelApplicationClass} :</label>
-                    <div class="col-md-9">
-                        <input class="form-control input-md" type="text" name="application_class" value="<#if application.applicationClass??>${application.applicationClass}<#else>${plugin_model.pluginName?cap_first}App</#if>"  />
-                    </div>
-                </div>
-                 
-                 <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_application.labelBusinessClass} :  </label>        
-                    <div class="col-md-9">
-                        <#list combo_business_classes?sort_by('name') as business>
-                            <#assign used = false>
-                            <#list plugin_applications as plugin_application> 
-                                <#if plugin_application.getIdBusinessClasses()?seq_contains(business.code?number)>
-                                    <#assign used = true>
-                                </#if>
-                            </#list>
-                            <#if used>
-                                <input type="checkbox" disabled="disabled" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}<br />
-                            <#else>
-                                <input type="checkbox" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}<br />
-                            </#if>
-                        </#list>
-                    </div>   
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_application.labelApplicationClass} :</label>
+							<div class="col-md-9">
+								<input class="form-control input-md" type="text" name="application_class" value="<#if application.applicationClass??>${application.applicationClass}<#else>${plugin_model.pluginName?cap_first}App</#if>"  />
+							</div>
+						</div>
+						 
+						 <div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_application.labelBusinessClass} :  </label>        
+							<div class="col-md-9">
+								<#list combo_business_classes?sort_by('name') as business>
+									<div class="checkbox">
+									<#assign used = false>
+									<#list plugin_applications as plugin_application> 
+										<#if plugin_application.getIdBusinessClasses()?seq_contains(business.code?number)>
+											<#assign used = true>
+										</#if>
+									</#list>
+									<#if used>
+										<label><input type="checkbox" disabled="disabled" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}</label><br />
+									<#else>
+										<label><input type="checkbox" name="id_business_class${business.code}" value="${business.code}" />&nbsp;${business.name}</label><br />
+									</#if>
+									</div>
+								</#list>
+							</div>   
+						</div>
 
-                <div class="form-group">
-					<div class="col-md-offset-3 col-md-9">
-                    <button type="submit" name="action_createApplication" class="btn btn-primary">
-                        #i18n{pluginwizard.pluginwizard_create_application.buttonCreateApplication}
-                    </button>                   
-                    <button type="submit" name="view_manageApplications" class="btn btn-default">
-                        #i18n{pluginwizard.pluginwizard_create_application.buttonBack}
-                    </button>
-				</div>
-                </div> 
-            </fieldset>
-        </form>
-    </div>    
+						<div class="form-group">
+							<div class="col-md-offset-3 col-md-9">
+							<button type="submit" name="action_createApplication" class="btn btn-primary">
+								#i18n{pluginwizard.pluginwizard_create_application.buttonCreateApplication}
+							</button>                   
+							<button type="submit" name="view_manageApplications" class="btn btn-default">
+								#i18n{pluginwizard.pluginwizard_create_application.buttonBack}
+							</button>
+						</div>
+						</div> 
+					</fieldset>
+				</form>
+			</div>    
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
-
-
-
-
-
-
-
