--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -1,56 +1,61 @@
 <#include "sidebar.html" />   
 
-<!-- <div class="row"> -->
+<div class="row">
+	<div class="container">
+		<div class="panel panel-default">
 
-    <div class="col-md-3">             
-        <@sidebar step="model" />
-        <div class="well">         
-            #i18n{pluginwizard.pluginwizard_create_attribute.pageHelp}   
-        </div>  
-    </div>
+			<div class="col-md-3">             
+				<@sidebar step="model" />
+				<div class="well">         
+					#i18n{pluginwizard.pluginwizard_create_attribute.pageHelp}   
+				</div>  
+			</div>
 
 
-    <div class="col-md-9">
-        <form class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp" >  
-            <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_create_attribute.pageTitle}</legend>
-                <input type="hidden" name="page" value="pluginwizard" />        
-                <input type="hidden" name="business_class_id" value="${business_class_id}" />  
+			<div class="col-md-9">
+				<form class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp" >  
+					<fieldset>
+						<legend>#i18n{pluginwizard.pluginwizard_create_attribute.pageTitle}</legend>
+						<input type="hidden" name="page" value="pluginwizard" />        
+						<input type="hidden" name="business_class_id" value="${business_class_id}" />  
 
-                 <#include "errors_handler.html" />
+						 <#include "errors_handler.html" />
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeName} * :</label>      
-                    <div class="col-md-9">    
-                        <input type="text" class="form-control input-md" name="attribute_name" value="${attribute.attributeName!}" size="30" />      
-                    </div>
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeName} * :</label>      
+							<div class="col-md-9">    
+								<input type="text" class="form-control input-md" name="attribute_name" value="${attribute.attributeName!}" size="30" />      
+							</div>
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :</label>      
-                    <div class="col-md-9">       
-                        <@comboWithParams name="attribute_type_id" default_value="${attribute.attributeTypeId!'1'}" additionalParameters="class=\"form-control input-md\"" items=combo_attribute_type />      
-                    </div> 
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :</label>      
+							<div class="col-md-9">       
+								<@comboWithParams name="attribute_type_id" default_value="${attribute.attributeTypeId!'1'}" additionalParameters="class=\"form-control input-md\"" items=combo_attribute_type />      
+							</div> 
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} * : </label>                            
-                    <div class="col-md-9"> 
-                        <input class="checkbox" type="checkbox" name="not_null" value="1" <#if attribute?? && attribute.notNull>checked="checked"</#if>/>
-                    </div>  
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} * : </label>                            
+							<div class="col-md-9"> 
+								<input class="checkbox" type="checkbox" name="not_null" value="1" <#if attribute?? && attribute.notNull>checked="checked"</#if>/>
+							</div>  
+						</div>
 
-                <div class="form-group">                                          
-				<div class="col-md-offset-3 col-md-9">
-                    <button type="submit" name="action_createAttribute" class="btn btn-primary">
-                        #i18n{pluginwizard.pluginwizard_create_attribute.buttonCreateAttribute}
-                    </button>                    
-                    <button type="submit" name="view_modifyBusinessClass" class="btn btn-default">
-                        #i18n{pluginwizard.pluginwizard_create_attribute.buttonBack}
-                    </button>  
-				</div>					
-                </div>    
-            </fieldset>
-        </form>        
-    </div>    
-<!-- </div> -->
+						<div class="form-group">                                          
+						<div class="col-md-offset-3 col-md-9">
+							<button type="submit" name="action_createAttribute" class="btn btn-primary">
+								#i18n{pluginwizard.pluginwizard_create_attribute.buttonCreateAttribute}
+							</button>                    
+							<button type="submit" name="view_modifyBusinessClass" class="btn btn-default">
+								#i18n{pluginwizard.pluginwizard_create_attribute.buttonBack}
+							</button>  
+						</div>					
+						</div>    
+					</fieldset>
+				</form>        
+			</div>    
+			<div class="clearfix"></div>
+		</div>
+	</div>
+</div>
