--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
@@ -1,48 +1,53 @@
 <#include "sidebar.html" />   
 
 <div class="row">
+	<div class="container">
+		<div class="panel panel-default">
 
-    <div class="col-md-3">             
-        <@sidebar step="model" />
-        <div class="well">
-            #i18n{pluginwizard.pluginwizard_create_business_class.pageHelp}   
-        </div>  
-    </div>
+			<div class="col-md-3">             
+				<@sidebar step="model" />
+				<div class="well">
+					#i18n{pluginwizard.pluginwizard_create_business_class.pageHelp}   
+				</div>  
+			</div>
 
-    <div class="col-md-9">
+			<div class="col-md-9">
 
-        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >                    
-            <input type="hidden" name="page" value="pluginwizard" />        
-            <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_create_business_class.pageTitle}</legend>
+				<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >                    
+					<input type="hidden" name="page" value="pluginwizard" />        
+					<fieldset>
+						<legend>#i18n{pluginwizard.pluginwizard_create_business_class.pageTitle}</legend>
 
-                 <#include "errors_handler.html" />
+						 <#include "errors_handler.html" />
 
-                 <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessClass} *:</label>      
-                    <div class="col-md-9">    
-                        <input class="form-control input-md" type="text" name="business_class" value="" size="30" />      
-                    </div>  
-                </div>
+						 <div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessClass} *:</label>      
+							<div class="col-md-9">    
+								<input class="form-control input-md" type="text" name="business_class" value="" size="30" />      
+							</div>  
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessTableName} *:</label>      
-                    <div class="col-md-9"> 
-                         <input class="form-control input-md" type="text" name="business_table_name" value="${plugin_model.pluginName}_" size="30" />      
-                    </div>  
-                </div>
- 
-                <div class="form-group">
-					<div class="col-md-offset-3 col-md-9">
-                    <button type="submit" name="action_createBusinessClass" class="btn btn-primary">
-                        #i18n{pluginwizard.pluginwizard_create_business_class.buttonCreateClass}
-                    </button>                    
-                    <button type="submit" name="view_manageBusinessClasses" class="btn btn-default">
-                        #i18n{pluginwizard.pluginwizard_create_business_class.buttonBack}
-                    </button>
-					</div>
-                </div>    
-            </fieldset>
-        </form>        
-    </div>    
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessTableName} *:</label>      
+							<div class="col-md-9"> 
+								 <input class="form-control input-md" type="text" name="business_table_name" value="${plugin_model.pluginName}_" size="30" />      
+							</div>  
+						</div>
+		 
+						<div class="form-group">
+							<div class="col-md-offset-3 col-md-9">
+							<button type="submit" name="action_createBusinessClass" class="btn btn-primary">
+								#i18n{pluginwizard.pluginwizard_create_business_class.buttonCreateClass}
+							</button>                    
+							<button type="submit" name="view_manageBusinessClasses" class="btn btn-default">
+								#i18n{pluginwizard.pluginwizard_create_business_class.buttonBack}
+							</button>
+							</div>
+						</div>    
+					</fieldset>
+				</form>        
+			</div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
