--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -1,95 +1,99 @@
 <#include "sidebar.html" />   
 
-<div class="row"> 
+<div class="row">
+	<div class="container">
+		<div class="panel panel-default">
+			<div class="col-md-3">       
+				<@sidebar step="description" />
+				<div class="well">
+					#i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
+				</div>
+			</div>
 
-    <div class="col-md-3">       
-        <@sidebar step="description" />
-        <div class="well">
-            #i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
-        </div>
-    </div>
+			<div class="col-md-9">
+				<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >    
+					<input type="hidden" name="id_plugin" value="${plugin_id}" />
+					<fieldset>
+						<h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>                 
 
-    <div class="col-md-9">
-        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >    
-            <input type="hidden" name="id_plugin" value="${plugin_id}" />
-            <fieldset>
-                <h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>                 
+						<input type="hidden" name="page" value="pluginwizard" />                
 
-                <input type="hidden" name="page" value="pluginwizard" />                
+						<#include "errors_handler.html" />
 
-                <#include "errors_handler.html" />
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">                         	            	                        
-                        #i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName} :
-                    </label>       
-                    <div class="col-md-9">                
-                         <input class="form-control input-md" type="text" name="plugin_name" value="${plugin_model.pluginName!''}" readonly />       
-                    </div>
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">                         	            	                        
+								#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName} :
+							</label>       
+							<div class="col-md-9">                
+								 <input class="form-control" type="text" name="plugin_name" value="${plugin_model.pluginName!''}" readonly />       
+							</div>
+						</div>
 
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
-                    <div class="col-md-9">
-                         <input class="form-control input-md" type="text" name="plugin_description" value="" />
-                    </div>
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
+							<div class="col-md-9">
+								 <input class="form-control" type="text" name="plugin_description" value="" />
+							</div>
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
-                    <div class="col-md-9">
-                         <input class="form-control input-md" type="text" name="plugin_provider" value="" />
-                    </div>
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
+							<div class="col-md-9">
+								 <input class="form-control" type="text" name="plugin_provider" value="" />
+							</div>
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
-                    <div class="col-md-9">
-                         <input class="form-control input-md" type="text" name="plugin_version"  value="${plugin_version_number}" />
-                    </div>                                                                              
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
+							<div class="col-md-9">
+								 <input class="form-control" type="text" name="plugin_version"  value="${plugin_version_number}" />
+							</div>                                                                              
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright} : </label>       
-                    <div class="col-md-9">
-                         <input class="form-control input-md" type="text" name="plugin_copyright" value="Copyright (c) 2016 Your Company" />
-                    </div>  
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright} : </label>       
+							<div class="col-md-9">
+								 <input class="form-control" type="text" name="plugin_copyright" value="Copyright (c) 2016 Your Company" />
+							</div>  
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
-                    <div class="col-md-9">
-                         <input class="form-control input-md" type="text" name="plugin_provider_url"  value="http://your.web.site.com"  /> 
-                    </div>              
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
+							<div class="col-md-9">
+								 <input class="form-control" type="text" name="plugin_provider_url"  value="http://your.web.site.com"  /> 
+							</div>              
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugindbPoolRequired} :</label>            
-                    <div class="col-md-9">
-                        <select class="form-control input-md" name="plugin_db_pool_required">    				
-                            <option value="1">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelTrue}
-                            </option>    				
-                            <option value="0">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelFalse}
-                            </option>				
-                        </select>     
-                    </div>                   	
-                </div>                                                                                   
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugindbPoolRequired} :</label>            
+							<div class="col-md-9">
+								<select class="form-control" name="plugin_db_pool_required">    				
+									<option value="1">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelTrue}
+									</option>    				
+									<option value="0">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelFalse}
+									</option>				
+								</select>     
+							</div>                   	
+						</div>                                                                                   
 
-                <div class="form-group">
-					<div class="col-md-offset-3 col-md-9">
-                    <button type="submit" name="action_descriptionPrevious" class="btn btn-primary">
-                        <i class="glyphicon glyphicon-chevron-left"></i>
-                        #i18n{pluginwizard.pluginwizard_create_plugin_description.buttonBack}
-                    </button>                        
-                    <button type="submit" name="action_descriptionNext" class="btn btn-primary">
-                        #i18n{pluginwizard.pluginwizard_create_plugin_description.buttonNext}
-                        <i class="glyphicon glyphicon-chevron-right"></i>
-                    </button>
-					</div>
-                </div>                                              		
+						<div class="form-group">
+							<div class="col-md-offset-3 col-md-9">
+							<button type="submit" name="action_descriptionPrevious" class="btn btn-primary">
+								<i class="glyphicon glyphicon-chevron-left"></i>
+								#i18n{pluginwizard.pluginwizard_create_plugin_description.buttonBack}
+							</button>                        
+							<button type="submit" name="action_descriptionNext" class="btn btn-primary">
+								#i18n{pluginwizard.pluginwizard_create_plugin_description.buttonNext}
+								<i class="glyphicon glyphicon-chevron-right"></i>
+							</button>
+							</div>
+						</div>                                              		
 
-            </fieldset>
-        </form>		 		
-    </div>		 		
+					</fieldset>
+				</form>		 		
+			</div>	
+	 		<div class="clearfix"></div>
+		</div>		 		
+	</div>
 </div>
