--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_portlet.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_portlet.html
@@ -1,54 +1,58 @@
 <#include "sidebar.html" />   
 
 <div class="row">
+	<div class="container">
+		<div class="panel panel-default">
+			<div class="col-md-3">             
+				<@sidebar step="portlet" />
+				<div class="well">         
+					#i18n{pluginwizard.pluginwizard_create_portlet.pageHelp} 
+				</div>  
+			</div>
 
-    <div class="col-md-3">             
-        <@sidebar step="portlet" />
-        <div class="well">         
-            #i18n{pluginwizard.pluginwizard_create_portlet.pageHelp} 
-        </div>  
-    </div>
+			<div class="col-md-9">
 
-    <div class="col-md-9">
+				<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
+					<fieldset>
+						<legend>#i18n{pluginwizard.pluginwizard_create_portlet.pageTitle}</legend>
 
-        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >
-            <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_create_portlet.pageTitle}</legend>
+						<input type="hidden" name="page" value="pluginwizard" />
 
-                <input type="hidden" name="page" value="pluginwizard" />
+						 <#include "errors_handler.html" />
 
-                 <#include "errors_handler.html" />
+						 <div class="form-group">
+							<label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_create_portlet.labelPortletClass} :</label>
+							<div class="col-md-9">   
+								 <input class="form-control input-md" type="text" name="portlet_class" value="<#if portlet.portletClass??>${portlet.portletClass}<#else>${plugin_model.pluginName?cap_first}Portlet</#if>" />
+							</div>  
+						</div>
 
-                 <div class="form-group">
-                    <label class="control-label col-md-3">#i18n{pluginwizard.pluginwizard_create_portlet.labelPortletClass} :</label>
-                    <div class="col-md-9">   
-                         <input class="form-control input-md" type="text" name="portlet_class" value="<#if portlet.portletClass??>${portlet.portletClass}<#else>${plugin_model.pluginName?cap_first}Portlet</#if>" />
-                    </div>  
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelPortletTypeName} :</label>
+							<div class="col-md-9"> 
+								 <input class="form-control input-md" type="text" name="portlet_type_name" value="<#if portlet.portletTypeName??>${portlet.portletTypeName}<#else>${plugin_model.pluginName?upper_case}_PORTLET</#if>" />
+							</div>  
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelPortletTypeName} :</label>
-                    <div class="col-md-9"> 
-                         <input class="form-control input-md" type="text" name="portlet_type_name" value="<#if portlet.portletTypeName??>${portlet.portletTypeName}<#else>${plugin_model.pluginName?upper_case}_PORTLET</#if>" />
-                    </div>  
-                </div>
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelJspBaseName} :</label>
-                    <div class="col-md-9"> 
-                         <input class="form-control input-md" type="text" name="jsp_base_name" value="<#if portlet.jspBaseName??>${portlet.jspBaseName}<#else>Portlet${plugin_model.pluginName?cap_first}</#if>" />
-                    </div>  
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_portlet.labelJspBaseName} :</label>
+							<div class="col-md-9"> 
+								 <input class="form-control input-md" type="text" name="jsp_base_name" value="<#if portlet.jspBaseName??>${portlet.jspBaseName}<#else>Portlet${plugin_model.pluginName?cap_first}</#if>" />
+							</div>  
+						</div>
 
 
-                <div class="form-group">
-					<div class="col-md-offset-3 col-md-9">
-                    <button type="submit" name="action_createPortlet" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_create_portlet.buttonCreatePortlet}</button>    
-                    <button type="submit" name="view_managePortlets" class="btn">#i18n{pluginwizard.pluginwizard_create_portlet.buttonBack}</button></div>
-					</div> 
-            </fieldset>
-        </form>
-    </div>    
+						<div class="form-group">
+							<div class="col-md-offset-3 col-md-9">
+							<button type="submit" name="action_createPortlet" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_create_portlet.buttonCreatePortlet}</button>    
+							<button type="submit" name="view_managePortlets" class="btn">#i18n{pluginwizard.pluginwizard_create_portlet.buttonBack}</button></div>
+							</div> 
+					</fieldset>
+				</form>
+			</div>    
+<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
 
 
