--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_portlets.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_portlets.html
@@ -1,83 +1,85 @@
 <#include "sidebar.html" />   
 
 <div class="row">
+	<div class="container">
+		<div class="panel panel-default">
+			<div class="col-md-3">             
+				<@sidebar step="portlet" />
+				<div class="well">         
+					#i18n{pluginwizard.pluginwizard_manage_portlets.pageHelp}
+				</div>  
+			</div>
 
-    <div class="col-md-3">             
-        <@sidebar step="portlet" />
-        <div class="well">         
-            #i18n{pluginwizard.pluginwizard_manage_portlets.pageHelp}
-        </div>  
-    </div>
+			<div class="col-md-9">
 
-    <div class="col-md-9">
+				<#include "infos_handler.html" />
 
-        <#include "infos_handler.html" />
+				<h4>#i18n{pluginwizard.pluginwizard_manage_portlets.pageTitle}</h4>
 
-        <h4>#i18n{pluginwizard.pluginwizard_manage_portlets.pageTitle}</h4>
+				<div class="pull-right"> 
+					<form class="default-form" method="post" action="jsp/site/Portal.jsp">
+						<input type="hidden" name="page" value="pluginwizard" />
+						<input type="hidden" name="view" value="createPortlet" /> 
+						<button type="submit" class="btn btn-primary">
+							<i class="glyphicon glyphicon-plus"></i>
+							#i18n{pluginwizard.pluginwizard_manage_portlets.buttonAddPortlet}
+						</button>
+					</form>
+				</div>
 
-        <div class="pull-right"> 
-            <form class="default-form" method="post" action="jsp/site/Portal.jsp">
-                <input type="hidden" name="page" value="pluginwizard" />
-                <input type="hidden" name="view" value="createPortlet" /> 
-                <button type="submit" class="btn btn-primary">
-                    <i class="glyphicon glyphicon-plus"></i>
-                    #i18n{pluginwizard.pluginwizard_manage_portlets.buttonAddPortlet}
-                </button>
-            </form>
-        </div>
+			   <table class="table table-condensed table-striped">
+					<thead>
+						<tr>
+							<th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletClass}</th>
+							<th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletTypeName}</th>
+							<th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletJspBaseName}</th>
+							<th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletAction}</th>
+						</tr>
+					</thead>
 
-       <table class="table table-condensed table-striped">
-            <thead>
-                <tr>
-                    <th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletClass}</th>
-                    <th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletTypeName}</th>
-                    <th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletJspBaseName}</th>
-                    <th>#i18n{pluginwizard.pluginwizard_manage_portlets.labelPortletAction}</th>
-                </tr>
-            </thead>
+					<tbody>
+						<#if plugin_portlets?? > <#list plugin_portlets as portlet >
+						<tr>
+							<#assign nEndIndex = portlet.portletClass?length>
+							<#assign nBeginIndex = portlet.portletClass?last_index_of(".")+1>
 
-            <tbody>
-                <#if plugin_portlets?? > <#list plugin_portlets as portlet >
-                <tr>
-                    <#assign nEndIndex = portlet.portletClass?length>
-                    <#assign nBeginIndex = portlet.portletClass?last_index_of(".")+1>
+							<td>${portlet.portletClass?substring(nBeginIndex, nEndIndex)}
+							</td>
+							<td>${portlet.portletTypeName}</td>
+							<td>${portlet.jspBaseName}</td>
 
-                    <td>${portlet.portletClass?substring(nBeginIndex, nEndIndex)}
-                    </td>
-                    <td>${portlet.portletTypeName}</td>
-                    <td>${portlet.jspBaseName}</td>
+							<td>
+								<a class="btn btn-primary btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&view=modifyPortlet&portletId=${portlet.id}" 
+								   title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonModifyFeature}" >
+									<i class="glyphicon glyphicon-edit"></i>
+								</a>
+								<a class="btn btn-danger btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&action=confirmRemovePortlet&portletId=${portlet.id}" 
+								   title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonRemoveFeature}" >
+									<i class="glyphicon glyphicon-trash"></i>
+								</a>
+							</td>
+							</#list> 
+							</#if>
+						</tr>
+					</tbody>
+				</table>
 
-                    <td>
-                        <a class="btn btn-primary btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&view=modifyPortlet&portletId=${portlet.id}" 
-                           title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonModifyFeature}" >
-                            <i class="glyphicon glyphicon-edit"></i>
-                        </a>
-                        <a class="btn btn-danger btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&action=confirmRemovePortlet&portletId=${portlet.id}" 
-                           title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonRemoveFeature}" >
-                            <i class="glyphicon glyphicon-trash"></i>
-                        </a>
-                    </td>
-                    </#list> 
-                    </#if>
-                </tr>
-            </tbody>
-        </table>
+				<div class="form-group"> 
+					<form class="default-form" method="post" action="jsp/site/Portal.jsp">
+						<input type="hidden" name="page" value="pluginwizard" />
 
-        <div class="form-group"> 
-            <form class="default-form" method="post" action="jsp/site/Portal.jsp">
-                <input type="hidden" name="page" value="pluginwizard" />
-
-                <button type="submit" name="view_manageApplications" class="btn btn-primary">
-                    <i class="glyphicon glyphicon-chevron-left"></i>
-                    #i18n{pluginwizard.pluginwizard_manage_portlets.buttonBack}
-                </button>
-                <button type="submit" name="view_manageRest" class="btn btn-primary">
-                    #i18n{pluginwizard.pluginwizard_manage_portlets.buttonNext}
-                    <i class="glyphicon glyphicon-chevron-right"></i>
-                </button>
-            </form>
-        </div>
-    </div>
+						<button type="submit" name="view_manageApplications" class="btn btn-primary">
+							<i class="glyphicon glyphicon-chevron-left"></i>
+							#i18n{pluginwizard.pluginwizard_manage_portlets.buttonBack}
+						</button>
+						<button type="submit" name="view_manageRest" class="btn btn-primary">
+							#i18n{pluginwizard.pluginwizard_manage_portlets.buttonNext}
+							<i class="glyphicon glyphicon-chevron-right"></i>
+						</button>
+					</form>
+				</div>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
-
-
