--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
@@ -1,57 +1,65 @@
 <#include "sidebar.html" />   
 
 <div class="row">
+	<div class="container">
+		<div class="panel panel-default">
+			<div class="col-md-3">             
+				<@sidebar step="model" />
+				<div class="well">         
+					#i18n{pluginwizard.pluginwizard_modify_attribute.pageHelp}  
+				</div>  
+			</div>
 
-    <div class="col-md-3">             
-        <@sidebar step="model" />
-        <div class="well">         
-            #i18n{pluginwizard.pluginwizard_modify_attribute.pageHelp}  
-        </div>  
-    </div>
 
+			<div class="col-md-9">
+				<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp">   
+					<fieldset>
+						<legend>#i18n{pluginwizard.pluginwizard_modify_attribute.pageTitle}</legend>
 
-    <div class="col-md-9">
-        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp">   
-            <fieldset>
-                <legend>#i18n{pluginwizard.pluginwizard_modify_attribute.pageTitle}</legend>
+						<input type="hidden" name="page" value="pluginwizard" />        
+						<input type="hidden" name="business_class_id" value="${business_class_id}" />
+						<input type="hidden" name="attribute_id" value="${attribute.id}" />   
 
-                <input type="hidden" name="page" value="pluginwizard" />        
-                <input type="hidden" name="business_class_id" value="${business_class_id}" />
-                <input type="hidden" name="attribute_id" value="${attribute.id}" />   
+						 <#include "errors_handler.html" />
 
-                 <#include "errors_handler.html" />
+						 <div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeName} * : </label>      
+							<div class="col-md-9">       
+								<input type="text" class="form-control input-md" name="attribute_name" value="${attribute.attributeName}"/>      
+							</div>  
+						</div>
 
-                 <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeName} * : </label>      
-                    <div class="col-md-9">       
-                        <input type="text" class="form-control input-md" name="attribute_name" value="${attribute.attributeName}"/>      
-                    </div>  
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeType} * :</label>      
+							<div class="col-md-9">          
+								<@comboWithParams name="attribute_type_id" default_value="${attribute.attributeTypeId}" additionalParameters="class=\"form-control input-md\"" items=combo_attribute_type />      
+							</div>     
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeType} * :</label>      
-                    <div class="col-md-9">          
-                        <@comboWithParams name="attribute_type_id" default_value="${attribute.attributeTypeId}" additionalParameters="class=\"form-control input-md\"" items=combo_attribute_type />      
-                    </div>     
-                </div>
+						<div class="form-group">
+							<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelMandatory} * : </label>                            
+							<div class="col-md-9">    
+								<div class="checkbox">
+									<label>
+										<input class="checkbox" type="checkbox" name="not_null" value="1" <#if attribute.notNull>checked="checked"</#if>  />
+									</label>
+								</div>
+							</div>  
+						</div>
 
-                <div class="form-group">
-                    <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelMandatory} * : </label>                            
-                    <div class="col-md-9">    
-                        <input class="checkbox" type="checkbox" name="not_null" value="1" <#if attribute.notNull>checked="checked"</#if>  />
-                    </div>  
-                </div>
-
-                <div class="form-group">  
-					<div class="col-md-offset-3 col-md-9">
-                    <button type="submit" name="action_modifyAttribute"class="btn btn-primary">
-                        #i18n{pluginwizard.pluginwizard_modify_attribute.buttonModifyAttribute}
-                    </button>                    
-                    <button type="submit" name="view_modifyBusinessClass" class="btn">
-                        #i18n{pluginwizard.pluginwizard_modify_attribute.buttonBack}
-                    </button>                                                             
-                </div>   
-				</div> 				
-        </form>        
-    </div>    
+						<div class="form-group">  
+							<div class="col-md-offset-3 col-md-9">
+							<button type="submit" name="action_modifyAttribute"class="btn btn-primary">
+								#i18n{pluginwizard.pluginwizard_modify_attribute.buttonModifyAttribute}
+							</button>                    
+							<button type="submit" name="view_modifyBusinessClass" class="btn">
+								#i18n{pluginwizard.pluginwizard_modify_attribute.buttonBack}
+							</button>                                                             
+						</div>   
+						</div> 				
+				</form>        
+			</div>    
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
